--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ main{
     height: 200px;
     opacity: 0.5;
     animation-name: circle-animate;
-    animation-duration: 1s;
+    animation-duration: 2s;
 }
 
 .theirChoiceImg{
@@ -250,6 +250,65 @@ main{
 @keyframes circle-animate {
     0% { transform: scale(0.5, 0.5) }
     100% { transform: scale(2,2) }
+}
+
+
+
+.verdict{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.battle p.verdict_text{
+    font-size: xxx-large;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.verdict_btn{
+    width: 160px;
+    background-color: #ffffff;
+    color:  #000;
+    padding: .6em;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    text-transform: uppercase;
+
+}
+
+.yourImg,
+.theirImg{
+    position: relative;
+}
+
+.imgGlow{
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    box-shadow: 0 0 50px 15px #48abe0;
+    animation: glow;
+    animation-duration: 3s;
+    animation-iteration-count: 3;
+}
+
+@keyframes glow {
+    from {
+        box-shadow: none;
+    }
+    to{
+        box-shadow: 0 0 50px 15px #48abe0;
+    }
 }
 
 /* media queries */
